--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,6 @@
 {
+  "node": true,
   "browser": true,
-  "jquery": true,
   "esnext": true,
   "bitwise": true,
   "camelcase": true,
@@ -12,5 +12,6 @@
   "noarg": true,
   "quotmark": "single",
   "undef": true,
-  "unused": "vars"
+  "unused": "vars",
+  "strict": true
 }
