--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
+    "bower": "^1.3.9",
+    "bower-files": "^1.5.0",
     "browser-sync": "^1.3.5",
     "del": "^0.1.1",
     "gulp": "^3.8.7",
