--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
   "devDependencies": {
-    "apache-server-configs": "^2.7.1",
-    "bower": "^1.3.9",
-    "bower-files": "^1.5.0",
-    "browser-sync": "^1.3.5",
-    "del": "^0.1.1",
-    "gulp": "^3.8.7",
-    "gulp-autoprefixer": "0.0.8",
-    "gulp-cache": "^0.2.1",
-    "gulp-changed": "^1.0.0",
-    "gulp-coffee": "^2.1.1",
-    "gulp-coffeelint": "^0.3.3",
-    "gulp-compass": "^1.2.0",
-    "gulp-csso": "^0.2.9",
-    "gulp-if": "^1.2.4",
-    "gulp-imagemin": "^1.0.0",
-    "gulp-jshint": "^1.8.4",
-    "gulp-load-plugins": "^0.5.3",
-    "gulp-minify-html": "^0.1.4",
-    "gulp-size": "^1.0.0",
-    "gulp-uglify": "^0.3.1",
-    "gulp-uncss": "^0.4.5",
-    "gulp-useref": "^0.6.0",
-    "gulp-util": "^3.0.0",
-    "jshint-stylish": "^0.4.0",
-    "run-sequence": "^0.3.6"
+    "apache-server-configs": "^2.14.0",
+    "bower": "^1.6.9",
+    "bower-files": "^3.11.3",
+    "browser-sync": "^2.10.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-cache": "^0.4.1",
+    "gulp-changed": "^1.3.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-coffeelint": "^0.5.0",
+    "gulp-compass": "^2.1.0",
+    "gulp-csso": "^1.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-size": "^2.0.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-uncss": "^1.0.4",
+    "gulp-useref": "^3.0.3",
+    "gulp-util": "^3.0.7",
+    "jshint": "^2.8.0",
+    "jshint-stylish": "^2.1.0",
+    "run-sequence": "^1.1.5"
   },
   "engines": {
     "node": ">=0.10.0"
