--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,7 @@
   "name": "web-starter-kit",
   "private": true,
   "dependencies": {
-    "modernizr": "~3.2.0",
-    "jquery": "~2.1.4"
-  },
-  "overrides": {
-    "modernizr": {
-      "main": "./modernizr.js"
-    }
+    "jquery": "~2.1.4",
+    "bootstrap-sass": "~3.3.6"
   }
 }
