--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "gulp-changed": "^1.3.0",
     "gulp-coffee": "^2.3.1",
     "gulp-coffeelint": "^0.5.0",
-    "gulp-compass": "^2.1.0",
     "gulp-csso": "^1.0.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-html": "^1.0.4",
+    "gulp-sass": "^2.1.1",
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.5.1",
     "gulp-uncss": "^1.0.4",
@@ -28,7 +28,7 @@
     "run-sequence": "^1.1.5"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.12.0"
   },
   "private": true
 }
