--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-html": "^1.0.4",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-sass": "^2.1.1",
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.5.1",
