--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp-util": "^3.0.7",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0",
-    "run-sequence": "^1.1.5"
+    "run-sequence": "^1.1.5",
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": ">=0.12.0"
