Add support for fonts through Bower
Fonts aren't loaded in the bootstrap-sass Bower package, so I added an overrides section for it.

Update the bootstrap icon-font-path with the default font path.

Added font path to the repo

--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,18 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "bootstrap-sass": "~3.3.6"
+  },
+  "overrides": {
+    "bootstrap-sass": {
+      "main": [
+        "assets/stylesheets/_bootstrap.scss",
+        "assets/javascripts/bootstrap.js",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.eot",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.svg",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
+        "assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
+      ]
+    }
   }
 }
