--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-coffee": "^2.3.1",
     "gulp-coffeelint": "^0.5.0",
     "gulp-csso": "^1.0.1",
+    "gulp-htmlhint": "^0.3.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
